tests/tests/snapshots/golden__gen__rust__kafka-pipeline.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "clickstream"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service Clickstream`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Vendored librdkafka (cmake-build): full consumer-group semantics at
# the cost of a native build chain — cmake is required (the generated
# Dockerfile installs it; see its build stage). rdkafka-sys is pinned
# to =4.7.0 (librdkafka 2.3.0): newer vendored librdkafkas (2.12.x)
# demand libcurl dev headers even with WITH_CURL=0.
rdkafka = { version = "0.36", features = ["cmake-build", "tokio", "libz-static"] }
rdkafka-sys = { version = "=4.7.0", features = ["cmake-build", "libz-static"] }
futures = "0.3"
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

# rdkafka's vendored librdkafka builds with cmake (statically linked,
# so the runtime stage needs nothing extra).
RUN apt-get update \
    && apt-get install -y --no-install-recommends cmake build-essential \
    && rm -rf /var/lib/apt/lists/*

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/clickstream /usr/local/bin/app
COPY --from=build /src/target/release/workers /usr/local/bin/workers

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# Clickstream

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Workers and scheduled jobs run separately:

```sh
cargo run --bin workers
```

Or bring up the full stack (API, workers/jobs, NATS):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers and scheduled jobs | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health', timeout=2)"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      KAFKA_URL: queue:9092
    depends_on:
      queue:
        condition: service_started

  workers:
    build: .
    command: ["workers"]
    environment:
      KAFKA_URL: queue:9092
    depends_on:
      queue:
        condition: service_started

  queue:
    image: apache/kafka:3.8.0
    # Dual listeners (v0.13 M2): in-network clients use queue:9092;
    # host clients (the generated tests/system suite) use
    # localhost:29092 -- a host client on 9092 would be redirected to
    # the unresolvable advertised name `queue`.
    ports:
      - "29092:29092"
    environment:
      KAFKA_NODE_ID: 1
      KAFKA_PROCESS_ROLES: broker,controller
      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@queue:9093
      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:29092
      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://queue:9092,EXTERNAL://localhost:29092
      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
============================================================
src/bin/workers.rs
============================================================
//! Runs every worker in one process. Generated by CIaC.

use clickstream::{config::Config, state::AppState, workers};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    clickstream::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    tokio::try_join!(
        workers::enrich::run(state.clone()),
    )?;
    Ok(())
}
============================================================
src/config.rs
============================================================
//! Runtime configuration for Clickstream. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub kafka_url: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            kafka_url: env_or("KAFKA_URL", "localhost:9092"),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! Clickstream — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod queue;
pub mod routes;
pub mod state;
pub mod schemas;
pub mod services;
pub mod workers;
============================================================
src/main.rs
============================================================
use clickstream::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    clickstream::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/queue.rs
============================================================
//! Broker client. Generated by CIaC.
//!
//! One `Queue` type per program, engine selected at generation time —
//! publish sites (api pipelines, workers, jobs, typed handlers) are
//! engine-agnostic; only the consume loops (workers, consumers,
//! channels) branch per engine.

use rdkafka::config::ClientConfig;
use rdkafka::producer::{FutureProducer, FutureRecord};

/// Kafka producer. Topics reuse the `<service>.<stream>` subject
/// names NATS programs use; consumer groups reuse the per-worker
/// queue-group names.
#[derive(Clone)]
pub struct Queue {
    producer: FutureProducer,
}

impl std::fmt::Debug for Queue {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        f.debug_struct("Queue").finish_non_exhaustive()
    }
}

impl Queue {
    pub async fn connect(url: &str) -> anyhow::Result<Self> {
        let producer = ClientConfig::new()
            .set("bootstrap.servers", url)
            .set("message.timeout.ms", "5000")
            .create()?;
        Ok(Self { producer })
    }

    pub async fn publish(&self, subject: &str, payload: Vec<u8>) -> anyhow::Result<()> {
        self.producer
            .send(
                FutureRecord::<(), _>::to(subject).payload(&payload),
                std::time::Duration::from_secs(5),
            )
            .await
            .map_err(|(err, _)| anyhow::anyhow!("kafka publish failed: {err}"))?;
        Ok(())
    }

    /// Builds a consumer in `group` subscribed to `subject`.
    /// `auto.offset.reset=earliest` so a consumer that starts after a
    /// publish still sees it — matching NATS-programs' effective
    /// semantics for the generated system tests.
    pub fn consumer(
        &self,
        url: &str,
        subject: &str,
        group: &str,
    ) -> anyhow::Result<rdkafka::consumer::StreamConsumer> {
        use rdkafka::consumer::Consumer;
        let consumer: rdkafka::consumer::StreamConsumer = ClientConfig::new()
            .set("bootstrap.servers", url)
            .set("group.id", group)
            .set("auto.offset.reset", "earliest")
            .create()?;
        consumer.subscribe(&[subject])?;
        Ok(consumer)
    }
}
============================================================
src/routes/ingest.rs
============================================================
//! Request pipeline for `api Ingest`. Generated by CIaC.
//!
//! Pipeline: publish clickstream.clicks -> Return


use axum::extract::State;
use axum::routing::post;
use axum::{Json, Router};

use crate::error::AppError;
use crate::schemas::Click;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/clicks", post(ingest))
}

async fn ingest(
    State(state): State<AppState>,
    Json(payload): Json<Click>,
) -> Result<Json<serde_json::Value>, AppError> {
    let result = payload;

    state
        .queue
        .publish("clickstream.clicks", serde_json::to_vec(&result)?)
        .await?;
    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod ingest;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(ingest::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/schemas.rs
============================================================
//! Data schemas from the program's `record` declarations. Generated by CIaC.

use serde::{Deserialize, Serialize};


#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Click {
    pub id: String,
    pub page: String,
}

============================================================
src/services/enrich_click.rs
============================================================
//! Handler for the `EnrichClick` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `EnrichClick` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::schemas::Click;
use crate::state::AppState;

/// Business logic for the `EnrichClick` step.
#[derive(Debug)]
pub struct EnrichClick {
}

impl EnrichClick {
    pub fn new(_state: &AppState) -> Self {
        Self {}
    }

    pub async fn handle(&self, payload: Click) -> anyhow::Result<Click> {
        // TODO: implement the EnrichClick step.
        Ok(payload)
    }
}
============================================================
src/services/mod.rs
============================================================
//! Business-logic handlers. Generated once by CIaC — this is where your
//! code goes.

pub mod enrich_click;
============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    pub queue: crate::queue::Queue,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let queue = crate::queue::Queue::connect(&config.kafka_url).await?;
        Ok(Self {
            config,
            queue,
        })
    }
}
============================================================
src/workers/enrich.rs
============================================================
//! Worker pipeline for `worker Enrich`. Generated by CIaC.
//!
//! Consumes `clickstream.clicks` in queue group `enrich`
//! so replicas of this worker load-balance messages between them.

use futures::future::try_join_all;

use crate::schemas::Click;
use crate::services::enrich_click::EnrichClick;
use crate::state::AppState;

pub const SUBJECT: &str = "clickstream.clicks";
pub const QUEUE_GROUP: &str = "enrich";
pub const CONCURRENCY: usize = 1;
pub const MAX_RETRIES: u32 = 0;

pub async fn run(state: AppState) -> anyhow::Result<()> {
    let tasks = (0..CONCURRENCY).map(|worker_index| {
        let state = state.clone();
        tokio::spawn(async move { consume(state, worker_index).await })
    });
    for result in try_join_all(tasks).await? {
        result?;
    }
    Ok(())
}

async fn consume(state: AppState, worker_index: usize) -> anyhow::Result<()> {
    use rdkafka::Message;
    let consumer = state
        .queue
        .consumer(&state.config.kafka_url, SUBJECT, QUEUE_GROUP)?;
    tracing::info!(subject = SUBJECT, worker_index, "worker Enrich consuming");
    loop {
        let message = match consumer.recv().await {
            Ok(message) => message,
            Err(err) => {
                tracing::warn!(?err, "kafka receive error");
                continue;
            }
        };
        let Some(bytes) = message.payload() else {
            continue;
        };
        let payload: Click = match serde_json::from_slice(bytes) {
            Ok(payload) => payload,
            Err(err) => {
                tracing::warn!(?err, "discarding malformed message");
                continue;
            }
        };
        if let Err(err) = handle_message(&state, payload).await {
            tracing::error!(?err, "message processing failed after retries");
        }
    }
}



async fn handle_message(state: &AppState, payload: Click) -> anyhow::Result<()> {
    for attempt in 0..=MAX_RETRIES {
        match handle_message_once(state, payload.clone()).await {
            Ok(()) => return Ok(()),
            Err(err) if attempt < MAX_RETRIES => {
                tracing::warn!(?err, attempt, "message processing failed; retrying");
            }
            Err(err) => return Err(err),
        }
    }
    Ok(())
}

async fn handle_message_once(state: &AppState, payload: Click) -> anyhow::Result<()> {
    let result = payload;

    let result = EnrichClick::new(state).handle(result).await?;
    let _ = result;
    Ok(())
}
============================================================
src/workers/mod.rs
============================================================
//! Queue-driven workers. Generated by CIaC.
//!
//! Run them all with `cargo run --bin workers`.

pub mod enrich;
