tests/tests/snapshots/golden__gen__rust__modular-video.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "modular-video"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service ModularVideo`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/modular-video /usr/local/bin/app

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# ModularVideo

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Or bring up the full stack (API):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers and scheduled jobs | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
============================================================
src/config.rs
============================================================
//! Runtime configuration for ModularVideo. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
}

impl Config {
    pub fn from_env() -> Self {
        Self {
        }
    }
}


============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! ModularVideo — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod schemas;
pub mod logic;
============================================================
src/logic/mod.rs
============================================================
//! Compiler-owned typed-handler logic, lowered from `.ciac` handler
//! bodies. Regenerated on every build; business logic lives in the
//! `.ciac` source, not here.

pub mod store_video;
============================================================
src/logic/store_video.rs
============================================================
//! Handler for the `StoreVideo` typed handler. Generated by CIaC.
//!
//! Compiler-owned: lowered from the source `handler StoreVideo(..) { .. }` body
//! on every build. Business logic lives in the `.ciac` source, not here.
use crate::state::AppState;
use crate::schemas::{ Video, VideoStatus };
#[derive(Debug)]
pub struct StoreVideo {
}

impl StoreVideo {
    pub fn new(_state: &AppState) -> Self {
        Self {}
    }

    // An unused `let` is a warning in the source language (`CIAC0045`),
    // not an error — a well-typed handler body can bind a value it
    // never reads. Rust's own `unused_variables` lint disagrees, so it's
    // allowed here rather than promoted to a hard failure by `-D warnings`.
    #[allow(unused_variables)]
    pub async fn handle(&self, v: Video) -> anyhow::Result<Video> {
let v1 = Video { status: VideoStatus::Ready, ..v };
return Ok(v1);
    }
}
============================================================
src/main.rs
============================================================
use modular_video::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    modular_video::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod upload;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(upload::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/routes/upload.rs
============================================================
//! Request pipeline for `api Upload`. Generated by CIaC.
//!
//! Pipeline: StoreVideo -> Return


use axum::extract::State;
use axum::routing::post;
use axum::{Json, Router};

use crate::error::AppError;
use crate::schemas::Video;
use crate::logic::store_video::StoreVideo;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/videos", post(upload))
}

async fn upload(
    State(state): State<AppState>,
    Json(payload): Json<Video>,
) -> Result<Json<serde_json::Value>, AppError> {
    let result = payload;

    let result = StoreVideo::new(&state).handle(result).await?;
    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/schemas.rs
============================================================
//! Data schemas from the program's `record` declarations. Generated by CIaC.

use serde::{Deserialize, Serialize};


#[derive(Debug, Clone, Copy, PartialEq, Eq, Serialize, Deserialize)]
pub enum VideoStatus {
    Pending,
    Ready,
}

impl VideoStatus {
    /// The wire/storage form of the variant.
    pub fn as_str(&self) -> &'static str {
        match self {
            VideoStatus::Pending => "Pending",
            VideoStatus::Ready => "Ready",
        }
    }

    /// The reverse of `as_str` — reconstructs the variant from a
    /// database/wire string, e.g. after `db.get` reads a `table`'s
    /// enum column back as plain text.
    pub fn from_str(s: &str) -> anyhow::Result<Self> {
        match s {
            "Pending" => Ok(VideoStatus::Pending),
            "Ready" => Ok(VideoStatus::Ready),
            other => Err(anyhow::anyhow!("invalid VideoStatus: {other}")),
        }
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Video {
    pub id: String,
    pub title: String,
    pub status: VideoStatus,
}

============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        Ok(Self {
            config,
        })
    }
}
